crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_codex_context_failure_title.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 18 },
    content: [
        "    │┌ 󰈙 SAVED SESSION · 0s ago ─────────┐                                      ",
        "▌ 󰚩 ││Keep this session visible while    │                                      ",
        "    ││sync is unavailable                │                                      ",
        "    ││                                   │                                      ",
        "   ││ars · session 00000000             │                                      ",
        "    ││Saved in Codex history, but not ope│                                      ",
        "    ││Unavailable: session is not open in│                                      ",
        "  󰆍 │└───────────────────────────────────┘                                      ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │Codex sessions · Last updated 2026-08-22T19:25:06Z · Sync [ Help (2 / F2) ]",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 32, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 63, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
