crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_codex_context_failure_toast.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 18 },
    content: [
        "    │┌Codex sessions · Updating…───────────────────────────────────────────────┐",
        "▌ 󰚩 ││                         Loading Codex sessions…                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "   ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    ││                     ┌ Could not refresh Codex sessions for context ars×┐│",
        "    ││                     │The context could not be queried. Try again.      ││",
        "    ││                     │                                                  ││",
        "    ││                     │                                             Retry││",
        "    │└─────────────────────└──────────────────────────────────────────────────┘┘",
        "    │[ ↑/↓ or wheel: select ] [ Enter/click: open ] [ Tab: activity ] [ F5: worl",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 0, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 12, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 17, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
    ]
}
