crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_codex_open_failure_toast.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 18 },
    content: [
        "    │┌ 󰋗 UNKNOWN (compact) · 0s ago ─────┐                                      ",
        "▌ 󰚩 ││Retry opening this session         │                                      ",
        "    ││                                   │                                      ",
        "    ││                                   │                                      ",
        "   ││wt · wt/ctx-timeout-toast · /home/w│                                      ",
        "    ││ars.dev · wt-host:%1 · session 0000│                                      ",
        "    ││Enter or click to open             │                                      ",
        "  󰆍 │└───────────────────────────────────┘                                      ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                                                                           ",
        "    │                      ┌ Could not open Codex session ───────────────────×┐ ",
        "    │                      │The session could not be focused. Try again.      │ ",
        "    │                      │                                                  │ ",
        "    │                      │                                             Retry│ ",
        "    │                      └──────────────────────────────────────────────────┘ ",
        "    │Codex sessions · Last updated 2026-08-21T20:00:00Z        [ Help (2 / F2) ]",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Gray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 63, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
