crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_control_codex_sessions.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 22 },
    content: [
        "    │┌Codex sessions · Last updated 2026-08-21T20:00:00Z───────────────────────────────────────────┐",
        "▌ 󰚩 ││┌ 󰚩 NEEDS ATTENTION · 0s ago ───────────────────────────────────────────────────────────────┐│",
        "    │││Improve authentication diagnostics                                                         ││",
        "    │││project · wt/auth-diagnostics · /home/wt/project                                           ││",
        "   │││ars.dev · wt-host:%1 · session 123e4567                                                    ││",
        "    │││Enter or click to open                                                                     ││",
        "    ││└───────────────────────────────────────────────────────────────────────────────────────────┘│",
        "    ││┌ 󰋗 UNKNOWN (compact) · 0s ago ─────────────────────────────────────────────────────────────┐│",
        "    │││Investigate compacted session                                                              ││",
        "    │││/home/wt/project                                                                           ││",
        "    │││ars.compact · wt-host:%2 · session 223e4567                                                ││",
        "    │││Enter or click to open                                                                     ││",
        "    ││└───────────────────────────────────────────────────────────────────────────────────────────┘│",
        "    ││┌ 󰈙 SAVED SESSION · 0s ago ─────────────────────────────────────────────────────────────────┐│",
        "    │││Review saved migration work                                                                ││",
        "    │││ars · session 323e4567                                                                     ││",
        "    │││Saved in Codex history, but not open in a WT pane                                          ││",
        "    │││Unavailable: session is not open in a WT pane                                              ││",
        "    ││└───────────────────────────────────────────────────────────────────────────────────────────┘│",
        "    ││┌ 󰅚 CONTEXT ERROR ──────────────────────────────────────────────────────────────────────────┐│",
        "    │└─────────────────────────────────────────────────────────────────────────────────────────────┘",
        "    │[ ↑/↓ or wheel: select ] [ Enter/click: open ] [ Tab: activity ] [ F5: world ]                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 0, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 35, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Gray, bg: Black, underline: Reset, modifier: BOLD,
        x: 37, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: BOLD,
        x: 33, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 17, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 17, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 52, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 98, y: 17, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 18, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 18, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 19, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 24, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 20, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 21, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
    ]
}
